--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"watch:css": "postcss static/tailwind.css -o static/main.css",
 		"dev": "npm run watch:css && sapper dev",
 		"build": "npm run build:css && sapper build --legacy",
-		"export": "sapper export",
+		"export": "sapper export --legacy",
 		"start": "node __sapper__/build",
 		"cy:run": "cypress run",
 		"cy:open": "cypress open",
