--- a/package.json
+++ b/package.json
@@ -44,11 +44,12 @@
 		"rollup-plugin-terser": "^5.3.0",
 		"sapper": "^0.27.0",
 		"svelte": "^3.0.0",
+		"svelte-polaris-icons": "^0.1.0",
 		"svelte-preprocess": "^3.7.4",
 		"tailwindcss": "^1.4.6"
 	},
 	"browserslist": [
-		"> 0.25%",
+		"> 0.20%",
 		"not dead"
 	]
 }
